	* apps/nshlib/nsh_parse.c:  Put the logic that executes a command
	  after parsing parameters into a separate file so that it can be
	  reused (2014-1-10).
	* apps/nshlib/nsh_parse.c:  Add initial support of commands enclosed
	  in back quotes as command arguments.  Functionality still incomplete
	  on initial commit (2014-1-10).
	* Logic to support commands enclosed in back quotes is functional
	  but not thoroughly tested (2014-1-11).
	* apps/nshlib/nsh_parse.c:  Can now handle arguments that are
	  concatenations of constant strings, command return data, application
	  return data, and environment variables (2014-1-11).
	* apps/nshlib/nsh_parse.c:  Fix a memory leak ... forgot to close
	  a temporary file (2013-1-12).
	* apps/system/inifile:  A simple INI file parser (perhaps too simple).
	  This is code that I wrote a long time ago and have used many time but
	  is untested in its current incarnation (2014-1-15).
	* aps/nshlib/nsh_parse.c:  Recent changes broke redirection of output
	  (2014-1-14).
	* apps/nshlib/nsh_parse.c:  Add true and false commands (2014-1-17)
	* apps/nshlib/nsh.h and nsh_parse.c:  Re-name and re-organize some
	  if-then-else related structures to better support forthcoming until
	  and while loops (2014-1-17).
	* apps/nshlib/nsh_script.c:  Now saves the FILE stream for the script
	  file in the vtbl structure so that it can be accessed by forthcoming
	  while and until logic (2014-1-17).
	* apps/nshlib/nsh.h, nsh_command.c, nsh_parse.c, and nsh_script.c:  Add
	  support for while-do-done and until-do-done loops.  These only work
	  when executing a script file because they depend on the ability to seek
	  in the file to implement the looping behaviors (2014-1-17).
	* apps/nshlib/nsh_parse.c:  Loosen up if-then-else-fi syntax to allow
	  a command to be on the same line as the then and else tokens like:
	  "if true; then echo true; else echo false; fi".  Much more like bash!
	  (2014-1-17).
